# cargo-mobile-experiment

./: Cargo.toml  mobile.toml
src/: lib.rs
