[package]
name = "cargo-mobile"
version = "0.1.0"
authors = ["cactice <14835424+Cactice@users.noreply.github.com>"]
edition = "2018"
resolver = "2"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "cargo-mobile-desktop"
path = "gen/bin/desktop.rs"

[dependencies]
futures = "0.3.8"
mobile-entry-point = "0.1.1"
wgpu = "0.12"
# use 0.27 for winit
winit = {git="https://github.com/rust-windowing/winit"}
pollster = "0.2"
env_logger ="0.9"
log = "0.4"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.10.1"
log = "0.4.11"
ndk-glue = "0.6"

[target.'cfg(not(target_os = "android"))'.dependencies]
wgpu-subscriber = "0.1.0"
