[package]
name = "cargo-mobile"
version = "0.1.0"
authors = ["cactice <14835424+Cactice@users.noreply.github.com>"]
edition = "2018"
resolver = "2"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "cargo-mobile-desktop"
path = "gen/bin/desktop.rs"

[dependencies]
futures = "0.3.8"
mobile-entry-point = "0.1.1"
# wgpu version is probably 0.13
wgpu = { git = "https://github.com/gfx-rs/wgpu", rev = "0ac9ce002656565ccd05b889f5856f4e2c38fa73" }
winit = "0.26"
pollster = "0.2"
env_logger = "0.9"
log = "0.4"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.10.1"
log = "0.4.11"
# ndk-glue must be compatible with winit
# https://github.com/rust-windowing/winit#android
ndk-glue = "0.5"

[target.'cfg(not(target_os = "android"))'.dependencies]
wgpu-subscriber = "0.1.0"
